@@ -1,3 +1,7 @@
+2007-02-10  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* tkchat.tcl: Add version fetch and display via tooltip.
+
 2007-02-07  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* tkchat.tcl: Make use of tooltip package to show url links. Load
